--- a/templates/form.html
+++ b/templates/form.html
@@ -11,10 +11,19 @@
         一般エージェント数: <input type="number" name="general_agents" value="20"><br>
         固執型エージェント数: <input type="number" name="persistent_agents" value="20"><br>
         忘却型エージェント数: <input type="number" name="forgetful_agents" value="20"><br>
-        逆張り型エージェント数: <input type="number" name="contrarian_agents" value="40"><br>
+        逆張り型エージェント数: <input type="number" name="contrarian_agents" value="20"><br>
         大衆迎合型エージェント数: <input type="number" name="mass_follower_agents" value="20"><br>
-        初期単語（カンマ区切り）: <input type="text" name="initial_words" value="asai-,uragane,kaiwai,hutehodo"><br>
-        各初期単語のエージェント数: <input type="number" name="initial_count" value="5"><br>
+        <h2>初期単語と各単語のエージェント数</h2>
+        <div>
+            単語1: <input type="text" name="word1" value="asai-">
+            人数: <input type="number" name="count1" value="5"><br>
+            単語2: <input type="text" name="word2" value="uragane">
+            人数: <input type="number" name="count2" value="5"><br>
+            単語3: <input type="text" name="word3" value="kaiwai">
+            人数: <input type="number" name="count3" value="5"><br>
+            単語4: <input type="text" name="word4" value="hutehodo">
+            人数: <input type="number" name="count4" value="5"><br>
+        </div>
         <input type="submit" value="シミュレーション開始">
     </form>
 </body>
