--- a/templates/form.html
+++ b/templates/form.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>シミュレーション設定</title>
+    <link rel="stylesheet" href="/static/form.css">
 </head>
 
 <body>
@@ -24,8 +25,13 @@
             単語4: <input type="text" name="word4" value="hutehodo">
             人数: <input type="number" name="count4" value="5"><br>
         </div>
-        <input type="submit" value="シミュレーション開始">
+        <div class="submit-button">
+            <input type="submit" value="シミュレーション開始">
+        </div>
     </form>
+    <div>
+        <a href="/readme">BazzWordシミュレータについて</a>
+    </div>
 </body>
 
 </html>
